--- a/src/main/resources/gui/dialog_genome_edit.fxml
+++ b/src/main/resources/gui/dialog_genome_edit.fxml
@@ -29,11 +29,11 @@
             <Label text="Genome size" GridPane.rowIndex="2" />
             <Label text="Fasta" GridPane.rowIndex="3" />
             <Label text="Gtf" GridPane.rowIndex="4" />
-            <TextField fx:id="codeField" GridPane.columnIndex="1" />
-            <TextField fx:id="nameField" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-            <TextField fx:id="genomeSizeField" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-            <TextField fx:id="fastaField" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-            <TextField fx:id="gtfField" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+            <TextField fx:id="codeField" promptText="integer, great than 0" GridPane.columnIndex="1" />
+            <TextField fx:id="nameField" promptText="any text for you to remerber" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <TextField fx:id="genomeSizeField" promptText="format can be 3.2e4 or 32000, put 0 if not sure" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <TextField fx:id="fastaField" promptText="genome reference FASTA file name" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+            <TextField fx:id="gtfField" promptText="genome annotation file name, can be GTF/GFF format" GridPane.columnIndex="1" GridPane.rowIndex="4" />
          </children>
       </GridPane>
       <Button layoutX="508.0" layoutY="363.0" mnemonicParsing="false" onAction="#handleCancel" text="Cancel" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="540.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="372.0" />
